tests/files/flow_controller_tests/should_run/005.cmdr
//Test simple variable assignment with arrays
x = [1, 2, 3];
y = x;
print x;
print y;