tests/files/flow_controller_tests/should_fail/001.cmdr
//Should fail on index array out of bounds
x = [1, 2, 3];
y = x[4];